--- a/templates/case.html
+++ b/templates/case.html
@@ -1,5 +1,7 @@
 {% extends "templates/_base.html" %}
 
 {% block content %}
-<h1>Cases</h1>
+<div class="container">
+  {% include 'templates/_case.html' %}
+</div>
 {% endblock content %}
