--- a/less/style.less
+++ b/less/style.less
@@ -130,6 +130,11 @@ ul.tab-selector {
         color:@cr-lightest;
       }
     }
+
+    &.active {
+      background-color: @cr-highlight;
+      a { color: @cr-lightest;}
+    }
   }
 }
 
