--- a/less/style.less
+++ b/less/style.less
@@ -520,7 +520,7 @@ Results
     min-width:100%;
   }
   #cpd-progress rect {
-    height:16px;
+    height:24px;
     fill:#bd261d;
     /*fill:#000;*/
   }
@@ -540,7 +540,7 @@ Results
     font-size: 6em;
       text-transform: uppercase;
       line-height: 1;
-      margin-top:2em;
+      margin-top:15vh;
       margin-bottom:0;
       text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
   }
@@ -590,6 +590,8 @@ Results
     min-height:100vh;
     max-height:100vh;
     position:relative;
+    opacity:0;
+    z-index:3;
   }
   section.slide .fixed {
     width:100%;
@@ -597,32 +599,18 @@ Results
     position: absolute;
     top: 0;
   }
+  section#slide-intro {
+    opacity:1;
+  }
   section#slide-intro .img {
     background-image: url("../images/01-112414_FergusonReaction-2.jpg");
     background-size: cover;
     background-position: center center;
   }
   section#slide-1 {
-    //background-image: url("../images/IMG_9158.jpg");
     background-size: cover;
     background-position: center center;
-    opacity:0;
-  }
-  section#slide-2 {
-    opacity:0;
-  }
-  section#slide-2 .img{
-    background-image: url("../images/02-IMG_9158.jpg");
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    width: 100%;
-    position:absolute;
-    opacity:0;
-  }
-  section#slide-3 .block{
-
-  }
+  }  
   section#slide-3 .img {
     background-image: url("../images/02-jg_closures_protest_15.jpg");
     background-size: cover;
@@ -632,23 +620,59 @@ Results
     position:absolute;
     opacity:0;
   }
-  section#slide-4 {
+  .bgimg {
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    width: 100%;
+    position:fixed;
+    top:0;
+    opacity:0;
+  }
+  #bg-1 {
+    background-image: url("../images/02-jg_closures_protest_15.jpg");
+  }
+  #bg-2 {
+    background-image: url("../images/11-srupolo_cpd-board-meeting-22.jpg")
+  }
+  #bg-3 {
     background-image: url("../images/02-112414_EricGarnerProtestDay2-50.jpg");
-    background-size: cover;
-    background-position: center center;
-    height:100vh;
   }
-  section#slide-5 {
-    background-image: url("../images/06-LE0A1948.jpg");
-    background-size: cover;
-    background-position: center center;
-    height:100vh;
+  #bg-4 {
+    //background-image: url("../images/06-LE0A1948.jpg");
+    background-image: url("../images/08-052015CityCouncilFirstMeetingwithNewMembers53.jpg");
   }
-  section#slide-6 {
-    background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
-    background-size: cover;
-    background-position: center center;
-    height:100vh;
+  #bg-5 {
+    //background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+    background-image: url("../images/10-052015CityCouncilFirstMeetingwithNewMembers49.jpg");
+  }
+  #bg-6 {
+    background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");   
+  }
+  #bg-7 {
+    background-image: url("../images/07-121314_MillionsMarchChi-4.jpg");
+  }
+  #bg-8 {
+    background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+  }
+  #bg-9 {
+    background-image: url("../images/06-121314_MillionsMarchChi-53.jpg");
+  }
+  #bg-10 {
+    background-image: url("../images/06-LE0A1948.jpg"); 
+    //background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
+  }
+  #bg-11 {
+    background-image: url("../images/02-IMG_9158.jpg");
+  }
+  #bg-11-overlay {
+    background-color:rgba(0,0,0,.7);
+    position:fixed;
+    width:100%;
+    height:100vh; 
+    bottom: 0;
+    z-index:3;
+    opacity:0;
   }
   .overlay {
     background-color:#000;
@@ -661,7 +685,6 @@ Results
     background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-
   }
 
   /*
@@ -703,6 +726,12 @@ Results
   }
   .spacer.s10 {
     min-height: 1000px;
+  }
+  .spacer.vh1{
+    min-height: 100vh;
+  }
+  .spacer.vh1.half{
+    min-height: 50vh;
   }
 }
 
