homepage, responsive tweaks

--- a/less/style.less
+++ b/less/style.less
@@ -736,8 +736,15 @@ Results
 }
 
 @media screen and (max-width: 760px) {
+  #home #desc h1 {
+    font-size:3em;
+
+  }
+  #home #desc h2 {
+    font-size:1.5em;
+  }
+
   #home .block h3 {
     font-size:2em;
-    margin-top:2em;
   }
 }
