--- a/less/style.less
+++ b/less/style.less
@@ -579,11 +579,25 @@ Results
 
   .block h3 {
     font-size: 4em;
-      line-height: 1;
-      margin-top:2em;
-      margin-bottom:0;
-      padding:0 20%;
-      text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+    line-height: 1;
+    margin-top:2em;
+    margin-bottom:0;
+    padding:0 20%;
+    text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+
+      img {
+        max-width:20px;
+        display: block;
+        margin: 10px auto;
+        -webkit-filter: grayscale(1);
+        filter: grayscale(1);
+
+        &:hover {
+          -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+        }
+      }
+
   }
   section.slide {
     width:100%;
@@ -591,7 +605,7 @@ Results
     max-height:100vh;
     position:relative;
     opacity:0;
-    z-index:3;
+    z-index:9;
   }
   section.slide .fixed {
     width:100%;
