--- a/less/style.less
+++ b/less/style.less
@@ -132,8 +132,17 @@ ul.tab-selector {
     }
 
     &.active {
-      background-color: @cr-highlight;
-      a { color: @cr-lightest;}
+      background-color: lighten(@cr-light,25%);
+      border:1px solid lighten(@cr-light,15%);
+      border-bottom:none;
+      a { 
+        color: @cr-dark;
+        text-decoration: none;
+        
+        &:hover {
+          color: @cr-darkest;
+        }
+      }
     }
   }
 }
