--- a/templates/_officer_search_form.html
+++ b/templates/_officer_search_form.html
@@ -3,7 +3,7 @@
     <form id="officer-search-form">
       <div class="form-group">
         <label>Search for an officer</label>
-        <input class="typeahead" type="text" name="officer" placeholder="Type a name of badge number..." />
+        <input class="typeahead" type="text" name="officer" placeholder="Type a name or badge number..." />
       </div>
     </form>
   </div>
