--- a/less/style.less
+++ b/less/style.less
@@ -253,7 +253,17 @@ ul.tab-selector {
 
       }
     }
+  }
+  #officer-search-form .form-group {
+    width:100%;
 
+    .twitter-typeahead {
+        min-width: 100%;
+    }
+
+    .typeahead {
+      width:100%;
+    }
   }
 }
 
@@ -769,5 +779,23 @@ Results
 
   #home .block h3 {
     font-size:2em;
+  }
+
+  ul.tab-selector {
+    font-size:.8em;
+  }
+  .tab-containers {
+    .form-group {
+      width:100%;
+      margin-bottom:0;
+      padding-bottom:0;
+
+      &:last-of-type {
+        padding-bottom:16px;
+      }
+    }
+    #tag-toggle {
+      margin-top: 16px;
+    }
   }
 }
