--- a/less/style.less
+++ b/less/style.less
@@ -769,16 +769,25 @@ Results
 }
 
 @media screen and (max-width: 760px) {
-  #home #desc h1 {
-    font-size:3em;
+  #home {
+    #desc h1 {
+      font-size:3em;
 
-  }
-  #home #desc h2 {
-    font-size:1.5em;
-  }
+    }
+    #desc h2 {
+      font-size:1.5em;
+    }
 
-  #home .block h3 {
-    font-size:2em;
+    .block h3 {
+      font-size:2em;
+    }
+
+    .spacer.vh1{
+      min-height: 50vh;
+    }
+    .spacer.vh1.half{
+      min-height: 25vh;
+    }
   }
 
   ul.tab-selector {
