--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,13 +461,16 @@ Results
 }
 #home #cpd-logo {
   display: inline-block;
+  background-image: url("../images/cr-icon.jpg");
+  background-size: contain;
   border-right: 1px solid rgba(122, 122, 122, 0.5);
   margin-right: 1em;
   line-height: 0;
 }
-#home #cpd-logo img {
-  display: block;
-  line-height: 0;
+#home #cpd-logo a {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
 }
 #home #cpd-title {
   font-family: 'Open Sans Condensed', sans-serif;
@@ -674,6 +677,9 @@ Results
   padding-top: .45em;
   border-radius: 1em;
   margin: .5em;
+  transition: background-color 0.25s ease-in-out;
+  -moz-transition: background-color 0.25s ease-in-out;
+  -webkit-transition: background-color 0.25s ease-in-out;
 }
 #home .share:hover {
   background-color: #ffffff;
