--- a/less/style.less
+++ b/less/style.less
@@ -69,6 +69,7 @@ Search Screen
 ========================================================================== */
 .container {
   max-width:1100px;
+  padding: 80px 0;
   .jumbotron {
     background-color:transparent;
     border-radius:0;
@@ -420,6 +421,90 @@ Results
   }
 }
 
+/* 
+  Nav
+*/
+#cpd-header {
+  position:fixed;
+  width:100%;
+  z-index:99999;
+}
+#cpd-headwrap {
+  background-color:rgba(0,0,0,1);
+  color:#fff;
+  border-bottom:1px solid rgba(122,122,122,.5);
+  line-height: 0;
+}
+#cpd-logo {
+  display:inline-block;
+  background-image: url("../images/cr-icon.jpg");
+  background-size: contain;
+  border-right:1px solid rgba(122,122,122,.5);
+  margin-right:1em;
+  line-height: 0;
+
+  a {
+    display:inline-block;
+    width:60px;
+    height:60px;
+  }
+}
+a.cpd-title, a.cpd-title:visited {
+  color:@cr-lightest;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700;
+  text-transform:uppercase;
+  display:inline-block;
+  line-height: 0;
+  font-weight:bold;
+  font-size:1.35em;
+  vertical-align: top;
+  padding: 1.6em 0 0 0;
+  &:hover {
+    cursor:pointer;
+    text-decoration: none;
+    opacity:.9;
+  }
+}
+
+.cpd-links {
+  a {
+    padding:0 1em;
+    border-right:1px solid white;
+    &:hover {
+      color:lighten(@cr-highlight,10%);
+      text-decoration: none;
+    }
+  }
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  ul {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+  }
+  li{
+    text-transform:uppercase;
+    display:inline-block;
+    font-weight:bold;
+    line-height:4.5;
+    &:last-of-type{
+      a {
+        border-right:none;
+      }
+    }
+  }
+}
+
+a, a:visited {
+  text-decoration: none;
+  color: @cr-highlight;
+}
+a:hover {
+  text-decoration: underline;
+}
 
 /* ==========================================================================
 Results
@@ -427,6 +512,11 @@ Results
 #home {
 
   background-color: #000;
+
+
+  #cpd-headwrap {
+    background-color:rgba(0,0,0,.5);
+  }
 
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans Condensed', sans-serif;
@@ -448,13 +538,6 @@ Results
   }
   h2 {
     font-size: 20px;
-  }
-  a, a:visited {
-    text-decoration: none;
-    color: @cr-highlight;
-  }
-  a:hover {
-    text-decoration: underline;
   }
   .touchonly {
     display: none;
@@ -498,45 +581,7 @@ Results
       height: 1%;
   }
 
-  /* 
-    Nav
-  */
-  #cpd-header {
-    position:fixed;
-    width:100%;
-    z-index:99999;
-  }
-  #cpd-headwrap {
-    background-color:rgba(0,0,0,.5);
-    color:#fff;
-    border-bottom:1px solid rgba(122,122,122,.5);
-    line-height: 0;
-  }
-  #cpd-logo {
-    display:inline-block;
-    background-image: url("../images/cr-icon.jpg");
-    background-size: contain;
-    border-right:1px solid rgba(122,122,122,.5);
-    margin-right:1em;
-    line-height: 0;
-
-    a {
-      display:inline-block;
-      width:60px;
-      height:60px;
-    }
-  }
-  #cpd-title {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 700;
-    text-transform:uppercase;
-    display:inline-block;
-    line-height: 0;
-    font-weight:bold;
-    font-size:1.35em;
-    vertical-align: top;
-      padding: 1.6em 0 0 0;
-  }
+  
   #cpd-progress {
     width:100%;
     position: fixed;
@@ -738,7 +783,7 @@ Results
     display: inline-block;
     width: 2em;
     height: 2em;
-    background-color: fade(@cr-highlight,30%);
+    background-color: fade(@cr-lightest,30%);
     text-align: center;
     padding-top: .45em;
     border-radius: 1em;
